--- a/.releaserc.json
+++ b/.releaserc.json
@@ -17,9 +17,9 @@
 	}],
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "preset": "angular" }],
-    ["@semantic-release/npm", { "npmPublish": false, "pkgRoot": "Assets/HnSF" }],
+    ["@semantic-release/npm", { "npmPublish": false, "pkgRoot": "Assets/ModContentFramework" }],
     ["@semantic-release/git", {
-      "assets": ["Assets/HnSF/package.json", "CHANGELOG.md"],
+      "assets": ["Assets/ModContentFramework/package.json", "CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
     "@semantic-release/github"
