--- a/Assets/ModContentFramework/package.json
+++ b/Assets/ModContentFramework/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "displayName": "Mod Content Framework",
   "description": "Framework for modded content.",
-  "unity": "2021.3"
+  "unity": "2021.3",
+  "dependencies": {
+    "com.unity.addressables": "1.19.19"
+  }
 }
